create left content

--- a/index.html
+++ b/index.html
@@ -9,46 +9,97 @@
 	<script type="text/javascript" src="bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>
 </head>
 <body>
-	<div class="row">
-		<div class="col-lg-8">
-			<h1 class="titleArticle">WELCOME TO MY BLOG</h1>
-			<h3 class="subTitleArticle"></h3>
-		</div>
-		<div class="col-lg-8">
-			<h1 class="titleArticle">BOLD AND EM STYLES</h1>
-			<h3 class="subTitleArticle"></h3>
-		</div>
-		<div class="col-lg-8">
-			<h1 class="titleArticle">HOVER NEWS & QUOTES</h1>
-			<h3 class="subTitleArticle"></h3>
-		</div>
-		<div class="col-lg-8">
-			<h1 class="titleArticle">AND DON'T FORGET LIST</h1>
-			<h3 class="subTitleArticle"></h3>
-		</div>
-		<div class="col-lg-8">
-			<div>
-				<p>MY LINKS</p>
-				<ul>
-					<li></li>
-					<li></li>
-					<li></li>
-					<li></li>
-				</ul>
+	<div class="row left-box">
+		<div class="col-lg-8 Article">
+			<div class="row">
+				<div class="col-lg-8 Article">
+					<div class="topArticle">
+						<div class="titletopArticle">WELCOME TO MY BLOG</div>
+						<div class="subTitletopArticle">BY MICHAEL ON OCTOBER 31,2006</div>
+					</div>
+					<div class="contentArticle">
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni soluta culpa modi fuga libero, pariatur autem reprehenderit cumque sequi iure eligendi odit nihil corrupti nam, eaque id doloremque, obcaecati ea.</p>
+					</div>
+					<div class="bottomArticle">
+						<span class="whiteText">Filed under : </span><span class="yellowText">Templates,Technology, Latin, Web-design</span><br/>
+						<span class="yellowText textUpper">
+						PERMALINK | COMMENTS</span>
+					</div>	
+				</div>
+				<div class="col-lg-8 Article">
+					<div class="topArticle">
+						<div class="titletopArticle">BOLD AND EM STYLES</div>
+						<div class="subTitletopArticle">BY MICHAEL ON OCTOBER 26,2006</div>
+					</div>
+					<div class="contentArticle">
+						<div class="left-img">
+							<img src="img/skate.jpg" alt="left box image">
+						</div>
+						<div>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni soluta culpa modi fuga libero, pariatur autem reprehenderit cumque sequi iure eligendi odit nihil corrupti nam, eaque id doloremque, obcaecati ea.</p>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni soluta culpa modi fuga libero, pariatur autem reprehenderit cumque sequi iure eligendi odit nihil corrupti nam, eaque id doloremque, obcaecati ea.</p>
+						</div>
+					</div>
+					<div class="bottomArticle">
+						<span class="whiteText">Filed under : </span><span class="yellowText">Templates,Technology, Latin, Web-design</span><br/>
+						<span class="yellowText textUpper">
+						PERMALINK | COMMENTS</span>
+					</div>	
+				</div>
+				<div class="col-lg-8 Article">
+					<div class="topArticle">
+						<div class="titletopArticle">HOVER NEWS & QUOTES</div>
+						<div class="subTitletopArticle">BY MICHAEL ON OCTOBER 18,2006</div>
+					</div>
+					<div class="contentArticle">
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni soluta culpa modi fuga libero, pariatur autem reprehenderit cumque sequi iure eligendi odit nihil corrupti nam, eaque id doloremque, obcaecati ea.</p>
+					</div>
+					<div class="bottomArticle">
+						<span class="whiteText">Filed under : </span><span class="yellowText">Templates,Technology, Latin, Web-design</span><br/>
+						<span class="yellowText textUpper">
+						PERMALINK | COMMENTS</span>
+					</div>	
+				</div>
+				<div class="col-lg-8 Article">
+					<div class="topArticle">
+						<div class="titletopArticle">AND DON'T FORGET LIST</div>
+						<div class="subTitletopArticle">BY MICHAEL ON OCTOBER 2,2006</div>
+					</div>
+					<div class="contentArticle">
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni soluta culpa modi fuga libero, pariatur autem reprehenderit cumque sequi iure eligendi odit nihil corrupti nam, eaque id doloremque, obcaecati ea.</p>
+					</div>
+					<div class="bottomArticle">
+						<span class="whiteText">Filed under : </span><span class="yellowText">Templates,Technology, Latin, Web-design</span><br/>
+						<span class="yellowText textUpper">
+						PERMALINK | COMMENTS</span>
+					</div>	
+				</div>
+				<div class="col-lg-8 Article">
+					<div>
+						<span>MY LINKS</span>
+						<ul>
+							<li></li>
+							<li></li>
+							<li></li>
+							<li></li>
+						</ul>
+					</div>
+					<div>
+						<span>WEB DESIGN</span>
+						<ul>
+							<li></li>
+							<li></li>
+							<li></li>
+							<li></li>
+						</ul>
+					</div>
+				</div>
 			</div>
-			<div>
-				<p>WEB DESIGN</p>
-				<ul>
-					<li></li>
-					<li></li>
-					<li></li>
-					<li></li>
-				</ul>
-			</div>
+		<div>
+		<div class="col-lg-4">
+	
 		</div>
 	</div>
-	
-
 	<footer>
 		<div>
 			<ul>
