--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 	<script type="text/javascript" src="bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>
 </head>
 <body>
-	<div class="container">
-		<div class="row left-box">
-			<div class="col-lg-8 Article">
+	<div class="container-fluid">
+		<div class="row">
+			<div class="col-lg-7 left-box">
 				<div class="row">
 					<div class="col-lg-8 Article">
 						<div class="topArticle">
@@ -96,9 +96,11 @@
 						</div>
 					</div>
 				</div>
-			<div>
-			<div class="col-lg-4">
-		
+			</div>
+			<div class="col-lg-4 col-lg-offset-1 right-box" >
+				<div class="titleImg text-center">
+					<img class="img-responsive" src="img/title.jpg">
+				</div>
 			</div>
 		</div>
 	</div>
