modif structure + css

--- a/index.html
+++ b/index.html
@@ -9,110 +9,136 @@
 	<script type="text/javascript" src="bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>
 </head>
 <body>
-	<div class="container-fluid">
+	<div class="container">
 		<div class="row">
 			<div class="col-lg-7 left-box">
-				<div class="row">
-					<div class="col-lg-8 Article">
-						<div class="topArticle">
-							<div class="titletopArticle">WELCOME TO MY BLOG</div>
-							<div class="subTitletopArticle">BY MICHAEL ON OCTOBER 31,2006</div>
-						</div>
-						<div class="contentArticle">
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni soluta culpa modi fuga libero, pariatur autem reprehenderit cumque sequi iure eligendi odit nihil corrupti nam, eaque id doloremque, obcaecati ea.</p>
-						</div>
-						<div class="bottomArticle">
-							<span class="whiteText">Filed under : </span><span class="yellowText">Templates,Technology, Latin, Web-design</span><br/>
-							<span class="yellowText textUpper">
-							PERMALINK | COMMENTS</span>
-						</div>	
+				<div class="Article">
+					<div class="topArticle">
+						<div class="titletopArticle">WELCOME TO MY BLOG</div>
+						<div class="subTitletopArticle">BY MICHAEL ON OCTOBER 31,2006</div>
 					</div>
-					<div class="col-lg-8 Article">
-						<div class="topArticle">
-							<div class="titletopArticle">BOLD AND EM STYLES</div>
-							<div class="subTitletopArticle">BY MICHAEL ON OCTOBER 26,2006</div>
-						</div>
-						<div class="contentArticle">
-							<div class="left-img">
-								<img src="img/skate.jpg" alt="left box image">
-							</div>
-							<div>
-								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni soluta culpa modi fuga libero, pariatur autem reprehenderit cumque sequi iure eligendi odit nihil corrupti nam, eaque id doloremque, obcaecati ea.</p>
-								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni soluta culpa modi fuga libero, pariatur autem reprehenderit cumque sequi iure eligendi odit nihil corrupti nam, eaque id doloremque, obcaecati ea.</p>
-							</div>
-						</div>
-						<div class="bottomArticle">
-							<span class="whiteText">Filed under : </span><span class="yellowText">Templates,Technology, Latin, Web-design</span><br/>
-							<span class="yellowText textUpper">
-							PERMALINK | COMMENTS</span>
-						</div>	
+					<div class="contentArticle">
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni soluta culpa modi fuga libero, pariatur autem reprehenderit cumque sequi iure eligendi odit nihil corrupti nam, eaque id doloremque, obcaecati ea.<br/>
+						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur id temporibus, tempore eveniet incidunt, labore molestiae sed ipsam vero eius, odio aliquid numquam ullam praesentium omnis excepturi amet corporis nemo.
+						</p>
 					</div>
-					<div class="col-lg-8 Article">
-						<div class="topArticle">
-							<div class="titletopArticle">HOVER NEWS & QUOTES</div>
-							<div class="subTitletopArticle">BY MICHAEL ON OCTOBER 18,2006</div>
-						</div>
-						<div class="contentArticle">
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni soluta culpa modi fuga libero, pariatur autem reprehenderit cumque sequi iure eligendi odit nihil corrupti nam, eaque id doloremque, obcaecati ea.</p>
-						</div>
-						<div class="bottomArticle">
-							<span class="whiteText">Filed under : </span><span class="yellowText">Templates,Technology, Latin, Web-design</span><br/>
-							<span class="yellowText textUpper">
-							PERMALINK | COMMENTS</span>
-						</div>	
+					<div class="bottomArticle">
+						<span class="whiteText">Filed under : </span><span class="yellowText">Templates,Technology, Latin, Web-design</span><br/>
+						<span class="yellowText textUpper bolderText">
+						PERMALINK | COMMENTS</span>
+					</div>	
+				</div>
+				<div class="Article">
+					<div class="topArticle">
+						<div class="titletopArticle">BOLD AND EM STYLES</div>
+						<div class="subTitletopArticle">BY MICHAEL ON OCTOBER 26,2006</div>
 					</div>
-					<div class="col-lg-8 Article">
-						<div class="topArticle">
-							<div class="titletopArticle">AND DON'T FORGET LIST</div>
-							<div class="subTitletopArticle">BY MICHAEL ON OCTOBER 2,2006</div>
+					<div class="contentArticle">
+						<div class="left-img">
+							<img src="img/skate.jpg" alt="left box image">
 						</div>
-						<div class="contentArticle">
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni soluta culpa modi fuga libero, pariatur autem reprehenderit cumque sequi iure eligendi odit nihil corrupti nam, eaque id doloremque, obcaecati ea.</p>
-						</div>
-						<div class="bottomArticle">
-							<span class="whiteText">Filed under : </span><span class="yellowText">Templates,Technology, Latin, Web-design</span><br/>
-							<span class="yellowText textUpper">
-							PERMALINK | COMMENTS</span>
-						</div>	
-					</div>
-					<div class="col-lg-8 Article">
 						<div>
-							<span>MY LINKS</span>
-							<ul>
-								<li></li>
-								<li></li>
-								<li></li>
-								<li></li>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni soluta culpa modi fuga libero, pariatur autem reprehenderit cumque sequi iure eligendi odit nihil corrupti nam, eaque id doloremque, obcaecati ea.<br/>
+							Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur id temporibus, tempore eveniet incidunt, labore molestiae sed ipsam vero eius, odio aliquid numquam ullam praesentium omnis excepturi amet corporis nemo.
+							</p>
+						</div>
+					</div>
+					<div class="bottomArticle">
+						<span class="whiteText">Filed under : </span><span class="yellowText">Templates,Technology, Latin, Web-design</span><br/>
+						<span class="yellowText textUpper bolderText">
+						PERMALINK | COMMENTS</span>
+					</div>	
+				</div>
+				<div class="Article">
+					<div class="topArticle">
+						<div class="titletopArticle">HOVER NEWS & QUOTES</div>
+						<div class="subTitletopArticle">BY MICHAEL ON OCTOBER 18,2006</div>
+					</div>
+					<div class="contentArticle">
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni soluta culpa modi fuga libero, pariatur autem reprehenderit cumque sequi iure eligendi odit nihil corrupti nam, eaque id doloremque, obcaecati ea.<br/>
+						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur id temporibus, tempore eveniet incidunt, labore molestiae sed ipsam vero eius, odio aliquid numquam ullam praesentium omnis excepturi amet corporis nemo.
+						</p>
+						<div class="encart center-block">
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni soluta culpa modi fuga libero, pariatur autem reprehenderit cumque sequi iure eligendi odit nihil corrupti nam, eaque id doloremque, obcaecati ea.
+							</p>			
+						</div>
+					</div>
+					<div class="bottomArticle">
+						<span class="whiteText">Filed under : </span><span class="yellowText">Templates,Technology, Latin, Web-design</span><br/>
+						<span class="yellowText textUpper bolderText">
+						PERMALINK | COMMENTS</span>
+					</div>	
+				</div>
+				<div class="Article">
+					<div class="topArticle">
+						<div class="titletopArticle">AND DON'T FORGET LIST</div>
+						<div class="subTitletopArticle">BY MICHAEL ON OCTOBER 2,2006</div>
+					</div>
+					<div class="contentArticle">
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni soluta culpa modi fuga libero, pariatur autem reprehenderit cumque sequi iure eligendi odit nihil corrupti nam, eaque id doloremque, obcaecati ea.</p>
+						<ul>
+							<li class="yellowText"><span class="whiteText">Lorem ipsum dolor sit amet.</span></li>
+							<li class="yellowText"><span class="whiteText">Lorem ipsum dolor sit amet.</span></li>
+							<li class="yellowText"><span class="whiteText">Lorem ipsum dolor sit amet.</span></li>
+							<li class="yellowText"><span class="whiteText">Lorem ipsum dolor sit amet.</span></li>
+						</ul>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur id temporibus, tempore eveniet incidunt, labore molestiae sed ipsam vero eius, odio aliquid numquam ullam praese
+						ntium omnis excepturi amet corporis nemo.
+						</p>
+						<ol>
+							<li class="whiteText">Lorem ipsum dolor sit amet.</li>
+							<li class="whiteText">Lorem ipsum dolor sit amet.</li>
+							<li class="whiteText">Lorem ipsum dolor sit amet.</li>
+							<li class="whiteText">Lorem ipsum dolor sit amet.</li>
+						</ol>
+					</div>
+					<div class="bottomArticle">
+						<span class="whiteText">Filed under : </span><span class="yellowText">Templates,Technology, Latin, Web-design</span><br/>
+						<span class="yellowText textUpper bolderText">
+						PERMALINK | COMMENTS</span>
+					</div>	
+				</div>
+				<div class="Article">
+					<div class="row">
+						<div class="col-xs-12 col-lg-offset-3 col-lg-4 center-block">
+							<div class="whiteText bolderText">MY LINKS</div>
+							<ul class="list-group">
+								<li class="list-group-item">digg.com</li>
+								<li class="list-group-item">Slashdot</li>
+								<li class="list-group-item">wikipedia</li>
+								<li class="list-group-item">Open Web Design</li>
+								<li class="list-group-item">topleft pixel</li>
+								<li class="list-group-item">Apple</li>
 							</ul>
 						</div>
-						<div>
-							<span>WEB DESIGN</span>
-							<ul>
-								<li></li>
-								<li></li>
-								<li></li>
-								<li></li>
+						<div class="col-xs-12 col-lg-4 center-block">
+							<div class="whiteText bolderText">WEB DESIGN</div>
+							<ul class="list-group">
+								<li class="list-group-item">CSS Play</li>
+								<li class="list-group-item"> Squidfingers</li>
+								<li class="list-group-item">Kaliber 10K</li>
+								<li class="list-group-item">Photoshop Start</li>
+								<li class="list-group-item">A List Apart</li>
+								<li class="list-group-item">Fractured Sanity</li>
 							</ul>
 						</div>
 					</div>
 				</div>
 			</div>
-			<div class="col-lg-4 col-lg-offset-1 right-box" >
-				<div class="titleImg text-center">
-					<img class="img-responsive" src="img/title.jpg">
-				</div>
+			<div class="col-lg-4 right-box">
+				<img class="img-responsive" src="img/title.jpg">
 			</div>
+		</div>
+		<div class="col-xs-12 col-lg-offset-1">
+			<ul class="list-inline">
+				<li class="whiteText">@2006 www.yourwebsite.com | </li>
+				<li class="whiteText"><span class="yellowText">XHTML</span> 1.1 | </li>
+				<li class="whiteText"> Valid <span class="yellowText">CSS</span></li>
+				<li class="whiteText">Design by MkLHX</li>
+			</ul>
 		</div>
 	</div>
 	<footer>
-		<div>
-			<ul>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-			</ul>
-		</div>
 	</footer>
 </body>
 </html>
