--- a/index.html
+++ b/index.html
@@ -1,162 +1,168 @@
 <!DOCTYPE html>
-<html lang="fr">
-<head>
-	<meta charset="UTF-8">
-	<title>Maquette HTML/CSS</title>
-	<link rel="stylesheet" href="bootstrap-3.3.7-dist/css/bootstrap.min.css">
-	<link rel="stylesheet" href="custom.css">
-	<script type="text/javascript" src="jquery-3.1.0.min.js"></script>
-	<script type="text/javascript" src="bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>
-</head>
-<body>
-	<div class="container-fluid">
-		<div class="row">
-			<div class="col-lg-12 back">
-				<div class="col-lg-7">
-					<div class="col-lg-12">
-						<div class="Article">
-							<div class="topArticle">
-								<div class="titletopArticle">WELCOME TO MY BLOG</div>
-								<div class="subTitletopArticle">BY MICHAEL ON OCTOBER 31,2006</div>
-							</div>
-							<div class="contentArticle">
-								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni soluta culpa modi fuga libero, pariatur autem reprehenderit cumque sequi iure eligendi odit nihil corrupti nam, eaque id doloremque, obcaecati ea.<br/>
-								Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur id temporibus, tempore eveniet incidunt, labore molestiae sed ipsam vero eius, odio aliquid numquam ullam praesentium omnis excepturi amet corporis nemo.
-								</p>
-							</div>
-							<div class="bottomArticle">
-								<span class="whiteText">Filed under : </span><span class="yellowText">Templates,Technology, Latin, Web-design</span><br/>
-								<span class="yellowText textUpper bolderText">
-								PERMALINK | COMMENTS</span>
-							</div>	
-						</div>
-						<div class="Article">
-							<div class="topArticle">
-								<div class="titletopArticle">BOLD AND EM STYLES</div>
-								<div class="subTitletopArticle">BY MICHAEL ON OCTOBER 26,2006</div>
-							</div>
-							<div class="contentArticle">
-								<div class="left-img">
-									<img src="img/skate.jpg" alt="left box image">
-								</div>
-								<div>
-									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni soluta culpa modi fuga libero, pariatur autem reprehenderit cumque sequi iure eligendi odit nihil corrupti nam, eaque id doloremque, obcaecati ea.<br/>
-									Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur id temporibus, tempore eveniet incidunt, labore molestiae sed ipsam vero eius, odio aliquid numquam ullam praesentium omnis excepturi amet corporis nemo.
-									</p>
-								</div>
-							</div>
-							<div class="bottomArticle">
-								<span class="whiteText">Filed under : </span><span class="yellowText">Templates,Technology, Latin, Web-design</span><br/>
-								<span class="yellowText textUpper bolderText">
-								PERMALINK | COMMENTS</span>
-							</div>	
-						</div>
-						<div class="Article">
-							<div class="topArticle">
-								<div class="titletopArticle">HOVER NEWS & QUOTES</div>
-								<div class="subTitletopArticle">BY MICHAEL ON OCTOBER 18,2006</div>
-							</div>
-							<div class="contentArticle">
-								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni soluta culpa modi fuga libero, pariatur autem reprehenderit cumque sequi iure eligendi odit nihil corrupti nam, eaque id doloremque, obcaecati ea.<br/>
-								Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur id temporibus, tempore eveniet incidunt, labore molestiae sed ipsam vero eius, odio aliquid numquam ullam praesentium omnis excepturi amet corporis nemo.
-								</p>
-								<div class="encart center-block">
-									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni soluta culpa modi fuga libero, pariatur autem reprehenderit cumque sequi iure eligendi odit nihil corrupti nam, eaque id doloremque, obcaecati ea.
-									</p>			
-								</div>
-							</div>
-							<div class="bottomArticle">
-								<span class="whiteText">Filed under : </span><span class="yellowText">Templates,Technology, Latin, Web-design</span><br/>
-								<span class="yellowText textUpper bolderText">
-								PERMALINK | COMMENTS</span>
-							</div>	
-						</div>
-						<div class="Article">
-							<div class="topArticle">
-								<div class="titletopArticle">AND DON'T FORGET LIST</div>
-								<div class="subTitletopArticle">BY MICHAEL ON OCTOBER 2,2006</div>
-							</div>
-							<div class="contentArticle">
-								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni soluta culpa modi fuga libero, pariatur autem reprehenderit cumque sequi iure eligendi odit nihil corrupti nam, eaque id doloremque, obcaecati ea.</p>
-								<ul>
-									<li class="yellowText"><span class="whiteText">Lorem ipsum dolor sit amet.</span></li>
-									<li class="yellowText"><span class="whiteText">Lorem ipsum dolor sit amet.</span></li>
-									<li class="yellowText"><span class="whiteText">Lorem ipsum dolor sit amet.</span></li>
-									<li class="yellowText"><span class="whiteText">Lorem ipsum dolor sit amet.</span></li>
-								</ul>
-								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur id temporibus, tempore eveniet incidunt, labore molestiae sed ipsam vero eius, odio aliquid numquam ullam praese
-								ntium omnis excepturi amet corporis nemo.
-								</p>
-								<ol>
-									<li class="whiteText">Lorem ipsum dolor sit amet.</li>
-									<li class="whiteText">Lorem ipsum dolor sit amet.</li>
-									<li class="whiteText">Lorem ipsum dolor sit amet.</li>
-									<li class="whiteText">Lorem ipsum dolor sit amet.</li>
-								</ol>
-							</div>
-							<div class="bottomArticle">
-								<span class="whiteText">Filed under : </span><span class="yellowText">Templates,Technology, Latin, Web-design</span><br/>
-								<span class="yellowText textUpper bolderText">
-								PERMALINK | COMMENTS</span>
-							</div>	
-						</div>
-						<div class="Article">
-							<div class="row">
-								<div class="col-xs-12 col-lg-offset-3 col-lg-4 center-block">
-									<div class="whiteText bolderText">MY LINKS</div>
-									<ul class="list-group">
-										<li class="list-group-item">digg.com</li>
-										<li class="list-group-item">Slashdot</li>
-										<li class="list-group-item">wikipedia</li>
-										<li class="list-group-item">Open Web Design</li>
-										<li class="list-group-item">topleft pixel</li>
-										<li class="list-group-item">Apple</li>
-									</ul>
-								</div>
-								<div class="col-xs-12 col-lg-4 center-block">
-									<div class="whiteText bolderText">WEB DESIGN</div>
-									<ul class="list-group">
-										<li class="list-group-item">CSS Play</li>
-										<li class="list-group-item"> Squidfingers</li>
-										<li class="list-group-item">Kaliber 10K</li>
-										<li class="list-group-item">Photoshop Start</li>
-										<li class="list-group-item">A List Apart</li>
-										<li class="list-group-item">Fractured Sanity</li>
-									</ul>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="col-lg-1">
-					<div class="col-lg-12 middle">
-						<img class="img-responsive" src="img/middle.jpg">
-					</div>
-				</div>
-				<div class="col-lg-4">
-					<div class="col-lg-12 title">
-						<h1 class="whiteText boldText">FREE STYLE</h1>
-						<img class="img-responsive" src="img/title.jpg">
-					</div>
-					<div class="col-lg-12 footer">
-						<img class="img-responsive" src="img/footer.gif">
-					</div>
-				</div>
-			</div>
-			<div class="col-lg-12 back">
-				<div class="col-lg-offset-1 col-lg-11">
-					<ul class="list-inline">
-						<li class="whiteText">@2006 www.yourwebsite.com | </li>
-						<li class="whiteText"><span class="yellowText">XHTML</span> 1.1 | </li>
-						<li class="whiteText"> Valid <span class="yellowText">CSS</span></li>
-						<li class="whiteText">Design by MkLHX</li>
-					</ul>
-					<img class="img-responsive" src="img/bg.jpg" alt="footer line">
-				</div>
-			</div>
-		</div>
-	</div>
-	<footer>
-	</footer>
-</body>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <title>QueteMaquette HTML_CSS</title>
+        <link href="bootstrap-3.3.7-dist/css/bootstrap.css" rel="stylesheet">
+        <link href="custom.css" rel="stylesheet">
+        <script src="jquery-3.1.0.min.js"></script>
+        <script src="bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>
+    </head>
+
+    <body>
+        <div class="container">
+            <div class="row ">
+                <div class="col-lg-offset-1 col-lg-4">
+                    <div class="row">
+                        <div class="col-lg-12">
+                            <h1>welcome to my blog</h1>
+                            <h2>by michael on october 31, 2006</h2>
+                            <p>This template was inspired by some artist friend of mine and i hope you find it useful. You can replace the title on the left by changing the text in the HTML or by using a bitmap <a href="#">graphics application</a> to modify the background graphic and add your on styled text.<br/>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam consequat nisl nec semper aliquam. Sed in enim in velit sodales bibendum quis eget odio. In luctus, nibh sed finibus commodo, sapien erat rhoncus nisi, non consequat ex elit ac ligula.    
+                            </p>
+                            <div class="bottom">
+                                Filed under : <mark>Templates, Technology, Latin, Web-design</mark><br />
+                                <a href="#">PERMALINK</a> | <a href="#">COMMENTS</a>
+                            </div>
+                        </div>
+                        <div class="col-lg-12">
+                            <h1>bold and em styles</h1>
+                            <h2>by michael on october 26, 2006</h2>
+                            <img src="img/skate.jpg" alt="skate" id="skate1"/>
+                            <p>If you need to make more rooom for the blog titles and keep them on one line, simply adjust the size of the #content H1 style. Bold text looks <strong>like this</strong>. It's 'Arial Black' and #FFF just like the title and the headers, however, if the person viewing the site removed 'Arial Black' then the font-weight:600 property will take care of bolding it as much as possible.<br /></p>
+
+                            <p>Emphasized or italisized text looks <em>like this</em>. I don't think the look of Arial's italics stands out, so I usually swap it out with Georgia.
+
+                            </p><br />
+                            <div class="bottom">
+                                Filed under : <mark>Templates, Technology, Latin, Web-design</mark><br />
+                                <a href="#">PERMALINK</a> | <a href="#">COMMENTS</a>
+
+                            </div>
+                        </div>
+
+                        <div class="col-lg-12">
+                            <h1>hover news & quotes</h1>
+                            <h2>by michael on october 18, 2006</h2>
+                            <img src="img/skate.jpg" alt="skate" id="skate2"/>
+                            <p>Right under the navigation menu to the right you will see a heading called Recent Updates. If you hover over the news items a short summary will pop up ans allow you to click to get to another page. You can use this as a link list giving people a short description of what your link is about. I learned the technique from Stu at <a href="#">CSS Play</a>. The original demo was to display a small photo gallery this way but I adapted it for text.
+                            </p><br />
+                            <blockquote>
+                                this is what quoted text looks like. Ut enim ad minim veniam, quis nostrud exercitation illamco laboris nisi ut aliquip ex ea commodo consequat.
+                            </blockquote>
+                            <div class="bottom">
+                                Filed under : <mark>Templates, Technology, Latin, Web-design</mark><br />
+                                <a href="#">PERMALINK</a> | <a href="#">COMMENTS</a>
+
+                            </div>
+                        </div>
+
+                        <div class="col-lg-12">
+                            <h1>and don't forget lists</h1>
+                            <h2>by michael on october 2, 2006</h2>
+                            <p>This is just a simple unordered list with a small 9x9 transparent 2-color gif in the shape of a diamond. It lists thebr /owsers I tested this template with.</p><br />
+                            <ul class="firstlist">
+                                <li>Firefox 1.5-2.0 (Mac & PC)</li>
+                                <li>Safari 2.0.4</li>
+                                <li>Intenet Explorer 6 & 7</li>
+                                <li>Opera 9.02 (Mac & PC)</li>    
+                            </ul>
+                            <br />
+                            <p>The ordered list shared most of the same properties save for the list item image above.</p><br />
+                            <ol>
+                                <li>Lorem ipsum dolor sit amet</li>
+                                <li>Lorem ipsum dolor sit amet</li>
+                                <li>Lorem ipsum dolor sit amet</li>
+                                <li>Lorem ipsum dolor sit amet</li>
+                            </ol><br />
+                            <div class="bottom">
+                                Filed under : <mark>Templates, Technology, Latin, Web-design</mark><br />
+                                <a href="#">PERMALINK</a> | <a href="#">COMMENTS</a>
+
+
+                            </div>
+
+                        </div>
+                        <div class="col-lg-4 col-lg-offset-1">
+                         <span class="linklist"><h3>my links</h3></span>
+                            <span class="linklist">digg.com</span><br />
+                            <span class="linklist">slashdot</span><br />
+                            <span class="linklist">wikipedia</span><br />
+                            <span class="linklist">Open Web Design</span><br />
+                            <span class="linklist">Topleft pixel</span><br />
+                            <span class="linklist">Apple</span><br />
+                        </div>
+                        <div class="col-lg-4 linklist">
+                            <span class="linklist"><h3>web design</h3></span>
+                            <span class="linklist">CSS Play</span><br />
+                            <span class="linklist">Squidfingers</span><br />
+                            <span class="linklist">Kaliber 10K</span><br />
+                            <span class="linklist">Photoshop Star</span><br />
+                            <span class="linklist">A list apart</span><br />
+                            <span class="linklist">Fractured Sanity</span><br />
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-1 middle">
+                    <div class="row middle">
+                    </div>
+                    <div class="row middle2">
+                    </div>
+                </div>
+
+
+                <div class="col-lg-3 full">
+                    <div class="row">
+                        <div class="col-lg-12 logo">
+                        </div>
+                        <div class="col-lg-12">
+                            <ul class="right-links">
+                                <li>HOME PAGE</li>
+                                <li>COOL LINKS</li>
+                                <li>MY ARTWORK</li>
+                                <li>CALENDAR</li>
+                                <li>CONTACT ME</li>
+                            </ul>
+                        </div>
+                        <div class="col-lg-12">
+                            <h1>recent updates</h1>
+                            <h2>last updated : 10/31/06</h2>
+                            <div class="updates">
+                                <p><h3>first news item</h3>
+                                <h3>october surprise</h3>
+                                <h3>don't forget to vote</h3>
+                                <h3>hover news rocks !</h3>
+                                <h3>owd gets an update</h3>
+                                <h3>use as link list</h3>
+                                <h3>taking names</h3>
+                                <h3>keep it under 8 items</h3>
+                                </p>
+                        </div>
+                    </div>
+                    <div class="col-lg-12">
+                        <h1>side item</h1>
+                        <h2>a note, form, or ad</h2>
+                        <div class="news">
+                            <p>This template is valid <a href="#">XHTML</a> 1.0 Strict and the <a href="#">CSS</a> file validates as well. It has been released under the Creative Commons Attribution v2.5 license. If you use this template, please keep a link to me on the site. Thank you.</p>
+                        </div>
+                        <div class="col-lg-12 footer">
+                            <img src="img/footer.gif"/>
+                </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        </div>
+    <footer>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-offset-1 col-lg-5">
+                    <p>2006 www. yourwebsite. com | <a href="#">XHTML</a> 1.1 | Valid <a href="#">CSS</a> | Design by Tony Pires</p>
+                </div>
+                
+            </div>
+        </div>
+    </footer>
+    </body>
+
 </html>
